--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarsExampleContainer" aria-controls="navbarsExampleContainer" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="{% url "home" %}">Beer</a>
+        <a class="navbar-brand" href="{% url "beer-list" %}">Beer</a>
 
         <div class="collapse navbar-collapse" id="navbarsExampleContainer">
             <ul class="navbar-nav mr-auto">
@@ -50,10 +50,12 @@
                     </div>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+                {% if user.is_authenticated %}
+                    <a class="btn btn-outline-success mr-sm-2" href="{% url "profile" %}">{{ user.email }}</a>
+                    <a class="btn btn-outline-success my-2 my-sm-0" href="{% url "logout" %}">Logout</a>
+                {% elif 'login' not in request.path %}
+                    <a class="btn btn-outline-success my-2 my-sm-0" href="{% url "login" %}">Login</a>
+                {% endif %}
         </div>
     </div>
 </nav>
