--- a/templates/registration/createuser.html
+++ b/templates/registration/createuser.html
@@ -2,16 +2,13 @@
 {% block content %}
     <div id="content-container" class="container p-none">
         <div class="lgn-container col-lg-8">
-            <form id="login-form" method="post" action="{% url 'login' %}">
+            <form id="profile-form" method="post" action="">
                 {% csrf_token %}
                 {{ form }}
-                <input type="submit" value="Login"
+                <input type="submit" value="Register"
                        class="btn btn-primary pull-right" />
                 <input type="hidden" name="next" value="{{ next }}" />
             </form>
-        </div>
-        <div class="lgn-container col-lg-8">
-            <a href="{% url 'register' %}">Register</a>
         </div>
     </div>
 {% endblock content %}
