--- a/beer/templates/brewer_beer.html
+++ b/beer/templates/brewer_beer.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col-4 text-right">
             <input type="submit" name="action" value="Save" class="btn btn-primary" role="button"/>
-            <input type="submit" name="action", value="Start" class="btn btn-success" role="button"/>
+            <input type="submit" name="action" value="Start" class="btn btn-success" role="button"/>
         </div>
     </div>
     </form>
